--- a/css/colorbox.css
+++ b/css/colorbox.css
@@ -29,14 +29,14 @@
     #cboxMiddleRight{width:21px; background:url(../images/controls.png) right top repeat-y;}
     #cboxTopCenter{height:21px; background:url(../images/border.png) 0 0 repeat-x;}
     #cboxBottomCenter{height:21px; background:url(../images/border.png) 0 -29px repeat-x;}
-    #cboxContent{background:#000; overflow:hidden;}
-        .cboxIframe{background:#fff;}
+    #cboxContent{background:#777; overflow:hidden;}
+        .cboxIframe{background:#000; opacity: .7;}
         #cboxError{padding:50px; border:1px solid #ccc;}
-        #cboxLoadedContent{margin-bottom:28px;}
+        /*#cboxLoadedContent{margin-bottom:28px;}*/
         #cboxTitle{position:absolute; bottom:4px; left:0; text-align:center; width:100%; color:#949494;}
         #cboxCurrent{position:absolute; bottom:4px; left:58px; color:#949494;}
-        #cboxLoadingOverlay{background:url(../images/overlay.png) no-repeat center center;}
-        #cboxLoadingGraphic{background:url(../images/overlay.png) no-repeat center center;}
+        /*#cboxLoadingOverlay{background:url(../images/loading_background.png) no-repeat center center;}*/
+        /*#cboxLoadingGraphic{background:url(../images/loading.gif) no-repeat center center;}*/
 
         /* these elements are buttons, and may need to have additional styles reset to avoid unwanted base styles */
         #cboxPrevious, #cboxNext, #cboxSlideshow, #cboxClose {border:0; padding:0; margin:0; overflow:visible; width:auto; background:none; }
