--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,7 @@
 }
 
 a {text-decoration: none; color: black;}
-body {background-image: url('../images/bg.jpg');}
+body {background-image: url('../images/bg.jpg');/*background: #000056;*/}
 img {
 	border-radius: 2px; 
 	height: 100px; 
@@ -18,7 +18,7 @@ img {
 p {font-family: FixWidth;}
 
 .selectedNav {
-	font-weight: bold;
+	/*font-weight: bold;*/
 	text-decoration: underline;
 	color: #ff8300;
 }
@@ -31,12 +31,13 @@ p {font-family: FixWidth;}
 #wrapper {
 	background: white;
 	border: gray solid 1px;
-	border-radius: 5px;
+	border-radius: 2px;
 	margin: auto;
-	width: 1000px;
+	width: 1100px;
 }
 	
 	#header {
+		color: white;
 		font-size: 2em;
 		text-align: center;
 		margin: auto;
@@ -59,48 +60,64 @@ p {font-family: FixWidth;}
 		margin: auto;
 		margin-top: -5px;
 		height: 1px;
-		width: 900px;
+		width: 1000px;
 	}
 
 	#menu {
-		float: left;
-		height: 359px;
-		width: 200px;
-		margin-left: 50px;
+		background: -webkit-radial-gradient(top, #000089, #000056);;
+		color: white;
+		/*float: left;*/
+		height: 30px;
+		width: 1100px;
+		margin-left: -20px;
+		/*border: 1px black solid;*/
 		border-bottom: 1px black solid;
-		border-right: 1px black solid;
-		border-top: 1px black solid;
-		margin-bottom: -1px;
-		margin-top: -1px;
-		border-bottom-right-radius: 8px;
-		border-top-right-radius: 8px;
+		/*border-right: 1px black solid;*/
+		/*border-top: 1px black solid;*/
+		/*margin-bottom: -1px;
+		margin-top: -1px;*/
+		margin: 0 auto;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		/*border-radius: 8px;*/
+		/*position: relative;*/
+		/*border-bottom-right-radius: 8px;*/
+		/*border-top-right-radius: 8px;*/
 	}
 
 		/*Space out nav items*/
-		.nav_item:first-child {margin-top: 15px;}
-
 		.nav_item {
-			font-size: 1.7em;
+			font-size: 1.6em;
 			font-family: FixWidth;
-			margin-bottom: 30px;
+			padding-right: 23px;
+			padding-left: 23px;
+			/*height: 30px;*/
+			padding-top: 7px;
+			padding-bottom: 7px;
 			text-align: center;
+			display: inline-block;
+			border: 1px white solid;
+			margin-right: -5px;
+			margin-top: -6px;
 		}
+		/*.nav_item:first-child {padding-left: 28px;}*/
+		/*.nav_item:last-child {padding-right: 28px;}*/
 
 		.nav_item:hover, .nav_item a:hover {cursor: pointer; color: #ff8300;}
 
-	.divider_v {
-		display: inline-block;
-		width: 1px;
-		height: 410px;
-		background: black;
-	}
+		.divider_v {
+			display: inline-block;
+			width: 1px;
+			height: 50px;
+			background: black;
+		}
 
 	#content {
 		float: right;
-		margin-right: 65px;
+		margin-right: 50px;
 		margin-top: 15px;
 		margin-bottom: 15px;
-		width: 670px;
+		width: 1000px;
 		text-align: center;
 	}
 
@@ -147,7 +164,7 @@ p {font-family: FixWidth;}
 	#footer {
 		clear: both;
 		height: 100px;
-		width: 900px;
+		width: 1000px;
 		margin: auto;
 		margin-top: 15px;
 		margin-bottom: 10px;
