--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,35 +6,33 @@
          url('../font/secrcode.ttf') format('truetype'),
          url('../font/secrcode.svg#SecretCodeRegular') format('svg');
 }
-/*html {font-smoothing: none;}*/
 a {text-decoration: none; color: black;}
-html {background-image: url('../images/bg.jpg');height: 100%;/*background: black;*/}
-body {
-	/*background-image: url('../images/bodyback.png');*/
-	/*padding-bo: -10px;*/
-	margin-top: -10px;
-	/*background: black;*/
-	/*margin: auto;*/
-	/*width: 1200px;*/
-	height: 100%;
-	/*border: none;*/
-	/*border-top-left-radius: 10px;*/
-	/*border-top-right-radius: 10px;*/
-}
+html {background-image: url('../images/bg.jpg');height: 100%;}
+body {margin-top: 0; height: 100%;}
 img {
 	border-radius: 2px; 
 	height: 100px; 
 	width: 100px;
 	box-shadow: 2px 4px 15px #888888;
 }
+
 p {font-family: FixWidth;}
 
-.selectedNav {
-	/*font-weight: bold;*/
-	text-decoration: underline;
-	/*color: #ff8300;*/
+.selectedNav {text-decoration: underline;}
+
+@-webkit-keyframes wiggle {
+	0% {-webkit-transform: rotate(0deg);}
+	33% {-webkit-transform: rotate(-.75deg);}
+	66% {-webkit-transform: rotate(.75deg);}
+	100% {-webkit-transform: rotate(0deg);}
 }
 
+@keyframes wiggle {
+	0% {transform: rotate(0deg);}
+	33% {transform: rotate(-1deg);}
+	66% {transform: rotate(1deg);}
+	100% {transform: rotate(0deg);}
+}
 	
 .selectedTitle { 
 	background: -webkit-linear-gradient(top, #000089, black);
@@ -42,9 +40,8 @@ p {font-family: FixWidth;}
 	background: -ms-linear-gradient(top, #000089, black);
 	background: -o-linear-gradient(top, #000089, black);
 	text-rendering: optimizeLegibility;
-	/*background: -webkit-radial-gradient(top, #33cccc, #248f8f);*/
 	color: white;
-	/*font-weight: bold;*/}
+}
 
 .notSelectedTitle { 
 	background: -webkit-linear-gradient(top, #FFc973, #ff9500);
@@ -52,130 +49,138 @@ p {font-family: FixWidth;}
 	background: -ms-linear-gradient(top, #FFc973, #ff9500);
 	background: -o-linear-gradient(top, #FFc973, #ff9500);
 	color: black;
-/*font-weight: bold;*/}
+}
+
+
+	
+#header {
+	background-color: white;
+	color: white;
+	font-size: 2em;
+	text-align: center;
+	margin: auto;
+	height: 120px;
+	width: 1100px;
+	padding-top: 1px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	padding-bottom: 10px;
+
+	z-index: 2000;
+
+}
+
+	/*Get rid of some header whitespace*/
+	#header p:first-child {margin-top: 15px;}
+	#header p:last-child {margin-bottom: 15px;}
+	#header p {margin: 0;}
+
+	.hidden {opacity: 0;}
+	.perm_hidden {opacity: 0;}
+
+.divider {
+	background: black;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	height: 1px;
+	opacity: .3;
+}
+
+#spacer {
+	background: -webkit-linear-gradient(top, #000089, black);
+	background: -moz-linear-gradient(top, #000089, black);
+	background: -wms-linear-gradient(top, #000089, black);
+	background: -o-linear-gradient(top, #000089, black);
+	color: white;
+	height: 35px;
+	width: 1100px;
+	border-bottom: 1px black solid;
+	/*padding: 0;*/
+	position: fixed;
+	top: 130px;
+	left: 0;
+	right: 0;
+	margin: auto;
+	z-index: 2000;
+}
+
+	/*Space out nav items*/
+	#menu { height: 35px; width: 1100px; margin: auto;}
+		#menu tbody {
+			height: 35px;
+			padding: 0;
+			margin: 0;
+		}
+
+			/*For specificity*/
+			#menu td:last-child {
+				border-right: none;
+				padding-left: 3px;
+				padding-right: 3px;
+			}
+
+			.nav_item {
+				width: 153px;
+				font-size: 14pt;
+				font-family: FixWidth;
+				/*height: 35px;*/
+				/*padding-top: 13px;*/
+				/*padding-bottom: 4px;*/
+				margin-top: 6px;
+				/*vertical-align: middle;*/
+				text-align: center;
+				display: inline-block;
+				border-right: 1px solid white;
+			}
+
+	.nav_item:hover, .nav_item a:hover {
+		cursor: pointer; 
+		text-decoration: underline;
+	}
+
+	.divider_v {
+		display: inline-block;
+		width: 1px;
+		height: 50px;
+		background: black;
+	}
 
 #wrapper {
 	background: white;
-	/*border: gray solid 1px;*/
 	border-radius: 3px;
-	/*border-top-left-radius: 10px;*/
-	/*border-top-right-radius: 10px;*/
 	margin: auto;
 	width: 1100px;
+	/*clear: both;*/
+	position: absolute;
+	top: 165px;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
-	
-	#header {
-		color: white;
-		font-size: 2em;
-		text-align: center;
-		margin: auto;
-		height: 110px;
-		width: 1100px;
-		padding-top: 1px;
-		margin-bottom: 10px;
-	}
-
-		/*Get rid of some header whitespace*/
-		#header p:first-child {margin-top: 15px;}
-		#header p:last-child {margin-bottom: 15px;}
-		#header p {margin: 0;}
-
-		.hidden {opacity: 0;/*display: none;*/}
-		.perm_hidden {opacity: 0; /*display: none;*/}
-
-	.divider {
-		/*clear: both;*/
-		background: black;
-		margin: auto;
-		margin-top: 5px;
-		margin-bottom: 5px;
-		margin-left: 5px;
-		height: 1px;
-		padding-left: 90px;
-		width: 790px;
-	}
-
-	#menu {
-		background: -webkit-linear-gradient(top, #000089, black);
-		background: -moz-linear-gradient(top, #000089, black);
-		background: -wms-linear-gradient(top, #000089, black);
-		background: -o-linear-gradient(top, #000089, black);
-		color: white;
-		/*float: left;*/
-		height: 20px;
-		width: 1100px;
-		margin-left: -20px;
-		/*border: 1px black solid;*/
-		border-bottom: 1px black solid;
-		/*border-right: 1px black solid;*/
-		/*border-top: 1px black solid;*/
-		/*margin-bottom: -1px;
-		margin-top: -1px;*/
-		margin: 0 auto;
-		/*padding-top: 5px;*/
-		padding-bottom: 3px;
-		/*border-radius: 8px;*/
-		/*position: relative;*/
-		/*border-bottom-right-radius: 8px;*/
-		/*border-top-right-radius: 8px;*/
-		/*font-weight: bold;*/
-	}
-
-		/*Space out nav items*/
-		table#menu {
-			padding: -2px;
-		}
-
-			#menu tbody {
-				padding: 0;
-			}
-			#menu tr {
-				padding: 0;
-			}
-
-				.nav_item {
-					font-size: 14pt;
-					font-family: FixWidth;
-					padding-right: 350px;
-					padding-left: 350px;
-					/*height: 30px;*/
-					padding-top: 7px;
-					padding-bottom: 7 px;
-					text-align: center;
-					display: inline-block;
-					/*width: 150px;*/
-					/*border: 1px white solid;*/
-					/*margin-right: -5px;*/
-					/*margin-top: -6px;*/
-				}
-		/*.nav_item:first-child {padding-left: 43px;}
-		.nav_item:last-child {padding-right: 43px;}*/
-
-		.nav_item:hover, .nav_item a:hover {cursor: pointer; /*color: #ff8300;*/text-decoration: underline;}
-
-		.divider_v {
-			display: inline-block;
-			width: 1px;
-			height: 50px;
-			background: black;
-		}
-
 	#content {
-		float: right;
-		margin-right: 50px;
-		margin-top: 15px;
 		margin-bottom: 15px;
-		width: 1000px;
+		width: 1100px;
 		text-align: center;
+		background-color: white;
 	}
+
+		.ui-accordion-content {
+			max-height: 585px;
+		}
 
 		/*Hide content by default as to not refresh page when switching tabs*/
-		.content_cat {display: none;}
+		.content_cat {
+			display: none; 
+			width: 1000px;
+			margin: auto;
+			padding-top: 15px;
+		}
 
 			.acc_title {
 				font-size: 14pt;
-				/*background: -webkit-radial-gradient(top, #FFc973, #ff9500);*/
-				/*color: black;*/
 				border-radius: 0;
 				border: 1px black solid;
 				margin-top: -3px;
@@ -187,29 +192,24 @@ p {font-family: FixWidth;}
 				background: -moz-linear-gradient(top, #000089, black);
 				background: -ms-linear-gradient(top, #000089, black);
 				background: -o-linear-gradient(top, #000089, black);
-				/*background: -webkit-radial-gradient(top, #33cccc, #248f8f);*/
 				color: white;
 				cursor: pointer;
-				/*font-weight: bold;*/}
-
-				/*.info {width: 750px;}*/
+			}
 
 				.section {clear: both; padding-top: 15px;}
 
 					.section img {float: left;}
 					.info_text {
-						/*color: orange;*/
 						text-align: left;
 						float: right;
 						font-size: 11pt;
 						width: 750px;
 						margin-top: -1px;
-						/*vertical-align: center;*/
+						/*background: red;*/
 					}
 					#content_projects .info_text {
 						margin-top: 20px;
 					}
-
 					.info_title {color: #ff8300; font-size: 16pt;}
 					.info_title a {color: #ff8300; font-size: 18pt;}
 
@@ -218,61 +218,60 @@ p {font-family: FixWidth;}
 			#skills_table {
 				font-family: FixWidth;
 				margin: auto;
-				text-align: center;
-				width: 1000px;
-				padding-left: 55px;
-				padding-right: 55px;
-				/*margin-left: 1000px;*/
+				/*text-align: center;*/
+				/*width: 1000px;*/
+				/*padding-left: 55px;*/
+				/*padding-right: 55px;*/
 			}
-
-				/*.break {c}*/
 
 				.score_bar {
 					width: 200px;
 					height: 20px;
-					/*background: white;*/
 					border: 1px solid gray;
-					border-radius: 7px;
-					/*background-image: url('../images/rank_red.png');*/
+					border-radius: 20px;
 				}
 
 					.score_bar div {
 						height: 20px;
-						border-radius: 7px;
+						border-radius: 20px;
 					}
 
 					.green {background-image: url('../images/rank_green.png');}
 					.yellow {background-image: url('../images/rank_yellow.png');}
 					.red {background-image: url('../images/rank_red.png');}
 
-				#skills_table tbody {width: 990px;}
-				#skills_table td {width: 330px;}
-				.skill_cat {color: #ff8300; font-size: 18pt;/*width: 500px;*/}
-				.skill {padding-right: 125px;padding-left: 75px;}
-
-				/*.score_bar #cpp {
-					background-image: url('../images/rank_green.png');
-					width: 130px;
-					border-radius: 3px;
-					background: green;
-				}*/
+				#skills_table tbody {width: 750px;}
+				#skills_table td {width: 250px;}
+				td.skill_cat {color: #ff8300; font-size: 17pt; text-align: left;}
+				.score_bar {float: right;}
 
 				#music_cont p, #photo_cont p {margin-top: 5px;}
 				#music_cont a:hover, #photo_cont a:hover {
 					text-decoration: underline;
 				}
 
-			iframe#res_frame {width: 1000px;height: 600px;overflow: scroll;display: none;}
+			iframe#res_frame {width: 1000px;height: 700px;overflow: scroll;display: none;}
 
 		#photo_cont td img {
 			height: 175px; 
 			width: 229px;
-			-webkit-transition: opacity .4s ease-in-out;
+			/*-webkit-transition: opacity .4s ease-in-out;
 			-moz-transition: opacity .4s ease-in-out;
 			-ms-transition: opacity .4s ease-in-out;
-			-o-transition: opacity .4s ease-in-out;
+			-o-transition: opacity .4s ease-in-out;*/
 		}
-		#photo_cont td img:hover {opacity: .7;}
+		#big_grid td img:hover {
+			/*opacity: .7; */
+			-webkit-animation:wiggle .6s;
+			-moz-transition:wiggle .6s;
+			-ms-transition:wiggle .6s;
+			-o-transition:wiggle .6s;
+			-animation: wiggle .6s;
+		}
+		#photo_cont .accented img {height: 358px; width: 463px;}
+		img.cboxPhoto {
+			border-radius: 0;
+		}
 
 	#footer {
 		clear: both;
@@ -280,12 +279,14 @@ p {font-family: FixWidth;}
 		width: 1100px;
 		margin: auto;
 		margin-top: 15px;
-		/*margin-bottom: 10px;*/
 		background: -webkit-linear-gradient(top, #000089, black);
 		background: -moz-linear-gradient(top, #000089, black);
 		background: -wms-linear-gradient(top, #000089, black);
 		background: -o-linear-gradient(top, #000089, black);
 		color: white;
+		/*margin-top: 70px;*/
+		/*position: fixed;*/
+		/*bottom: 0;*/
 	}
 
 		#footer_left {
@@ -302,13 +303,10 @@ p {font-family: FixWidth;}
 			font-family: Monospace;
 			text-align: left;
 			vertical-align: middle;
-			opacity: .8;
 		}
 
 			
 		#footer_right {padding-right: 10px; float: right; padding-top: 10px;}
-
-			/*#footer_right th {color: white; font-family: monospace; font-size: 1.2em; font-weight: normal;}*/
 
 			.button {
 				box-shadow: 0 0 0;
@@ -320,12 +318,9 @@ p {font-family: FixWidth;}
 				-ms-transition: opacity .3s ease-in-out;
 				-o-transition: opacity .3s ease-in-out;
 			}
-			.button:hover {
-				opacity: 1;
-			}
+			.button:hover {opacity: 1;}
 
 			.type_comm {
-				/*color: #777777;*/
 				font-family: monospace;
 				text-align: left;
 				width: 200px;
@@ -341,9 +336,10 @@ p {font-family: FixWidth;}
 #mhackers_logo , #panera_logo, #mjr_logo, #mtll_logo, #lcn_logo {
 	height: 150px; width: 150px; float: left;
 }
-#site_thumbnail {height: 125px; width: 200px; float: left;}
+#site_thumbnail {height: 125px; width: 200px; left: 0;}
 #TBP_logo {height: 200px; width: 150px; float: left;}
 #cover_pic {height: 261px; width: 253px;}
+#c {width: 110px;}
 #cpp {width: 150px;}
 #java {width: 50px;}
 #web {width: 110px;}
@@ -353,5 +349,5 @@ p {font-family: FixWidth;}
 #os {width: 150px;}
 #windows {width: 110px;}
 #leadership {width: 110px;}
-#creative {width: 110px;}
+#creative {width: 150px;}
 #motive {width: 150px;}
